# walacor-data-tracker

./: .gitignore  .pre-commit-config.yaml  README.md  pipeline.py  pyproject.toml  transactions_messy.csv
.github/workflows/: ci.yaml  release.yaml
core/: events.py  snapshot.py  tracker.py  utils.py
core/adapters/: __init__.py  base.py  pandas_adapter.py
core/writers/: __init__.py  console_writer.py
src/adapters/: pandas_adapter.py
src/core/: history.py
src/walacor_data_tracker/adapters/: base.py  pandas_adapter.py
src/walacor_data_tracker/core/: events.py  history.py  tracker.py
src/walacor_data_tracker/writers/console/: console_writer.py
src/walacor_data_tracker/writers/walacor/: _json.py  catalog.py  schema_builder.py  walacor_client.py  walacor_writer.py
src/walatrack/: __init__.py
src/walatrack/adapters/: __init__.py  base.py  pandas_adapter.py
src/walatrack/core/: __init__.py  events.py  history.py  snapshot.py  tracker.py  utils.py
src/walatrack/writers/: __init__.py
src/walatrack/writers/console/: __init__.py  console_writer.py
src/walatrack/writers/walacor/: __init__.py  walacor_client.py  walacor_writer.py
src/writers/console/: console_writer.py
src/writers/walacor/: __init__.py  walacor_client.py  walacor_writer.py
tests/core/: test_events.py
tests/functionality/: conftest.py  test_pandas_adapter.py
